# quail

./: AUTHORS.md  CHANGES.md  CHANGES.rst  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yml  environment-docs.yml  environment.yml  install_pkgs.R  pyproject.toml  r_requirements.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  process-request.md  process_request.md
.github/workflows/: docker-publish.yml  image-scan.yml  python-ci.yml
dev-component/: DEVELOPMENT.md  docker-compose-extra.yml  wps.cfg
docs/: Makefile  configuration.md  dev_guide.md  index.md  installation.md  processes.md
docs/formatted_demos/: wps_climdexInput_csv_demo.html  wps_climdexInput_quantile_demo.html  wps_climdexInput_raw_demo.html  wps_climdex_days_demo.html  wps_climdex_dtr_demo.html  wps_climdex_get_available_indices.html  wps_climdex_gsl_demo.html  wps_climdex_mmdmt_demo.html  wps_climdex_ptot.html  wps_climdex_rmm_demo.html  wps_climdex_rxnday_demo.html  wps_climdex_sdii_demo.html  wps_climdex_spells_demo.html  wps_climdex_temp_pctl.html
docs/source/: .gitignore  conf.py  configuration.rst  dev_guide.rst  installation.rst  processes.rst
docs/source/notebooks/: example.ipynb  wps_climdexInput_csv_demo.ipynb  wps_climdexInput_demo.ipynb  wps_climdexInput_quantile_demo.ipynb  wps_climdexInput_raw_demo.ipynb  wps_climdex_days_demo.ipynb  wps_climdex_dtr_demo.ipynb  wps_climdex_fd_demo.ipynb  wps_climdex_get_available_indices.ipynb  wps_climdex_gsl_demo.ipynb  wps_climdex_id_demo.ipynb  wps_climdex_mmdmt_demo.ipynb  wps_climdex_ptot.ipynb  wps_climdex_rmm_demo.ipynb  wps_climdex_rxnday_demo.ipynb  wps_climdex_sdi_demo.ipynb  wps_climdex_sdii_demo.ipynb  wps_climdex_spells_demo.ipynb  wps_climdex_su_demo.ipynb  wps_climdex_temp_pctl.ipynb
etc/: sample-custom.cfg
notebooks/: wps_climdexInput_csv_demo.ipynb  wps_climdexInput_quantile_demo.ipynb  wps_climdexInput_raw_demo.ipynb  wps_climdex_days_demo.ipynb  wps_climdex_dtr_demo.ipynb  wps_climdex_get_available_indices.ipynb  wps_climdex_gsl_demo.ipynb  wps_climdex_mmdmt_demo.ipynb  wps_climdex_ptot.ipynb  wps_climdex_rmm_demo.ipynb  wps_climdex_rxnday_demo.ipynb  wps_climdex_sdii_demo.ipynb  wps_climdex_spells_demo.ipynb  wps_climdex_temp_pctl.ipynb
pavics-component/: .gitignore  docker-compose-extra.yml  quail-magpie-permission.cfg.template  quail-magpie-provider.cfg.template  quail_canarie_api_monitoring.py.template
quail/: __init__.py  __version__.py  cli.py  default.cfg  io.py  utils.py
quail/processes/: __init__.py  wps_climdexInput.py  wps_climdexInput_csv.py  wps_climdexInput_raw.py  wps_climdex_days.py  wps_climdex_dtr.py  wps_climdex_fd.py  wps_climdex_get_available_indices.py  wps_climdex_gsl.py  wps_climdex_id.py  wps_climdex_mmdmt.py  wps_climdex_ptot.py  wps_climdex_quantile.py  wps_climdex_rmm.py  wps_climdex_rxnday.py  wps_climdex_sdi.py  wps_climdex_sdii.py  wps_climdex_spells.py  wps_climdex_su.py  wps_climdex_temp_pctl.py
tests/: __init__.py  common.py  conftest.py  test_utils.py  test_wps_caps.py  test_wps_climdexInput_csv.py  test_wps_climdexInput_raw.py  test_wps_climdex_days.py  test_wps_climdex_dtr.py  test_wps_climdex_fd.py  test_wps_climdex_get_available_indices.py  test_wps_climdex_gsl.py  test_wps_climdex_id.py  test_wps_climdex_mmdmt.py  test_wps_climdex_ptot.py  test_wps_climdex_quantile.py  test_wps_climdex_rmm.py  test_wps_climdex_rxnday.py  test_wps_climdex_sdi.py  test_wps_climdex_sdii.py  test_wps_climdex_spells.py  test_wps_climdex_su.py  test_wps_climdex_temp_pctl.py  test_wps_hello.py  test_wps_mmdmt.py
tests/data/: climdexInput.rda  climdexInput.rds  climdex_input_multiple.rda  ec.1018935.MAX_TEMP.rds  ec.1018935.prec.rds  ec.1018935.tmax.rds  ec.1018935.tmin.rds  expected_avail_indices.rda  expected_avail_processes.json  expected_dtr.rda  expected_frost_days.rda  expected_icing_days.rda  expected_mmdmt_data.rda  expected_ptot.rda  expected_quantiles.rda  expected_rmm.rda  expected_rxnday.rda  expected_sdi_data.rda  expected_sdii.rda  expected_spells_data.rda  expected_summer_days.rda  expected_temp_pctl.rda  expected_tropical_nights.rda  frost_days.rda  prec.rda  prec.rds  su_expected_output.rda  summer_days_file.json  tasmax.rda  tasmax.rds  tasmin.rda  tasmin.rds
